k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: towerdefense
  namespace: towerdefense
  labels:
    app: towerdefense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: towerdefense
  template:
    metadata:
      labels:
        app: towerdefense
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: app
          image: ghcr.io/danielroth1/towerdefense:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
