k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: towerdefense-service
  namespace: towerdefense
spec:
  type: ClusterIP
  selector:
    app: towerdefense
  ports:
    - port: 80
      targetPort: 80
