k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: towerdefense-ingress
  namespace: towerdefense
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - towerdefense.shopping-now.net
      secretName: towerdefense-tls-cert
  rules:
    - host: towerdefense.shopping-now.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: towerdefense-service
                port:
                  number: 80
